<resources>
    <string name="app_name">Github User</string>
    <string name="username">Username</string>
    <string name="loading">Loading</string>
    <string name="placeholder">--</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repository">Repository</string>
    <string name="followers_page">Followers Page</string>
    <string name="following_page">Following Page</string>
    <string name="user_not_found">User not found</string>
    <string name="button_for_adding_favorite">button for adding favorite</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="detail_user">Detail User</string>
    <string name="favorite_user">Favorite User</string>
    <string name="empty_favorite">Favorite list is empty</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="prefences">Preferences</string>
    <string name="logo_github">logo github</string>
</resources>